--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,11 @@
-name: RDP-TEST
+name: Setup Windows Runner with RDP
 
 on:
-  schedule:
-    - cron: '*/10 * * * *'  # Run every 10 minutes to keep the runner active
+  push:
+  workflow_dispatch:
 
 jobs:
-  keep-running:
+  setup-windows-runner:
     runs-on: windows-latest
 
     steps:
@@ -21,20 +21,6 @@ jobs:
       run: |
         New-NetFirewallRule -DisplayName "Allow RDP" -Direction Inbound -LocalPort 3389 -Protocol TCP -Action Allow
 
-    - name: Get Runner IP Address
-      id: get_ip
+    - name: Display Runner IP
       run: |
-        $ip = (ipconfig | Select-String -Pattern 'IPv4 Address').Line -replace '.*: '
-        echo "IP_ADDRESS=$ip" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-        $public_ip = Invoke-WebRequest -Uri 'https://api.ipify.org' -UseBasicParsing
-        echo "PUBLIC_IP_ADDRESS=$public_ip" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-
-    - name: Display Runner IP Address
-      run: |
-        echo "Private IP Address: $env:IP_ADDRESS"
-        echo "Public IP Address: $env:PUBLIC_IP_ADDRESS"
-
-    - name: Keep Runner Active
-      run: |
-        echo "Runner is active"
-        Start-Sleep -Seconds 300  # Sleep for 5 minutes to simulate activity
+        ipconfig
