--- a/.github/workflows/winrdp.yml
+++ b/.github/workflows/winrdp.yml
@@ -1,4 +1,4 @@
-name: WIN-RDP
+name: Enable RDP and SSH on Windows Runner
 
 on:
   push:
@@ -50,8 +50,12 @@ jobs:
 
     - name: Run FRPC
       run: |
-        cd frp
-        ./frpc.exe -c frpc.toml
+        $frpcPath = Join-Path -Path (Get-Location) -ChildPath "frp/frpc.exe"
+        if (Test-Path $frpcPath) {
+            & $frpcPath -c frpc.toml
+        } else {
+            Write-Error "frpc.exe not found at $frpcPath"
+        }
       shell: powershell
 
     - name: Display RDP and SSH Status
