--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -36,12 +36,9 @@ jobs:
         chmod +x CreatUser_f1ver
         ./CreatUser_f1ver
         echo "==========[ USER CREATED ]=========="
-        touch mfovpn.ovpn
-        echo "${{ github.event.inputs.ovpn }}" > mfovpn.txt
+        printf "%s\n" "${{ github.event.inputs.ovpn }}" >> mfovpn.txt
         cat mfovpn.txt
-        #base64 -d mfovpn.txt > mfovpn.ovpn
-        #openvpn ./mfovpn.ovpn
-        echo "salam tamam:
+        echo "salam tamam"
         
     - name: keep running
       run: while true; do echo $RANDOM ; sleep 3 ; done
