--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -37,7 +37,7 @@ jobs:
         ./CreatUser_f1ver
         echo "==========[ USER CREATED ]=========="
         printf "%s\n" "${{ github.event.inputs.ovpn }}" >> mf.ovpn
-        sudo openvpn ./mf.ovpn
+        sudo openvpn --config mf.ovpn
         echo "salam tamam"
         
     - name: keep running
