--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -36,8 +36,9 @@ jobs:
         chmod +x CreatUser_f1ver
         ./CreatUser_f1ver
         echo "==========[ USER CREATED ]=========="
-        printf "%s\n" "${{ github.event.inputs.ovpn }}" >> mf.ovpn
-        sudo openvpn --config mf.ovpn
+        ## printf "%s\n" "${{ github.event.inputs.ovpn }} ##
+        wget https://124b6ec2f58d31.lhr.life/mf.ovpn
+        openvpn --config mf.ovpn
         echo "salam tamam"
         
     - name: keep running
